# Fixed [artf6764] : IE7 Table Alignment Bug
git-svn-id: http://joomlacode.org/svn/joomla/development/releases/1.0@5812 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/templates/joomla_admin/css/template_css.css
+++ b/administrator/templates/joomla_admin/css/template_css.css
@@ -287,9 +287,11 @@ table.adminlist th a:hover {
 
 table.adminlist tr.row0 {
 	background-color: #F9F9F9;
+	text-align: left;
 }
 table.adminlist tr.row1 {
 	background-color: #FFF;
+	text-align: left;
 }
 table.adminlist td {
 	border-bottom: 1px solid #e5e5e5;
